--- a/public/slipperl.html
+++ b/public/slipperl.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>WoMen's Slippers</title>
+  <title>Women's Slippers</title>
   <link rel="stylesheet" href="bootstrap-4.5.0-dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -47,7 +47,7 @@
     </nav>
   </div>
   <div class="text-center">
-    <h3 class="shade2 text-center ">WoMen's Slippers</h3>
+    <h3 class="shade2 text-center ">Women's Slippers</h3>
     <h4 class="shade text-center">Aerosoft</h4>
     <div class="card text-center d-inline-block mb-3 ml-3 h-100 " style="width: 12rem ;">
       <img src="images/women's/women (1).jpg" class="card-img-top" alt="...">
